FIX: CSS Fix to remove various flickering

--- a/src/containers/PanelContainer.css
+++ b/src/containers/PanelContainer.css
@@ -67,7 +67,7 @@
 .DockerTS-ContentFrame.DockerTS-ContentFrame--Minimized {
     right: 0;
     bottom: 0;
-    max-width: var(--docker-ts-minimized-width);
+    width: var(--docker-ts-minimized-width);
     height: auto;
 }
 
