--- a/src/floating/Dialog.css
+++ b/src/floating/Dialog.css
@@ -5,7 +5,7 @@
     background: transparent;
     pointer-events: none;
     
-    //box-sizing: border-box;
+    box-sizing: border-box;
 
 
     /* Note - CSS style of shadow taken from the CSS Tailwind Framework */
